--- a/client/public/index.html
+++ b/client/public/index.html
@@ -8,8 +8,9 @@
     <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
     <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootswatch/4.0.0/journal/bootstrap.min.css"/> -->
-    <link href="https://fonts.googleapis.com/css?family=Gloria+Hallelujah|Lobster|Luckiest+Guy|Permanent+Marker" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Audiowide|Gloria+Hallelujah|Lobster|Luckiest+Guy|Permanent+Marker" rel="stylesheet">
     <title>2019 Volleyball</title>
+
   </head>
   <body>
     <noscript>
